Add extra paragraph remotely

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Git Website</h1>
     <p>An example website for a git lesson.</p>
+    <p>This site is modified on GitHub too.</p>
   </body>
 </html>
